<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.CadastroOngActivity">

    <ImageView
        android:id="@+id/imglogo2"
        android:layout_width="104dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/etxtcadnomeong"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/nome_ong"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imglogo2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etxtcadconfirmarsenhaong"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/confirmar_senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtcadsenhaong"
        app:layout_constraintVertical_bias="0.016" />

    <EditText
        android:id="@+id/etxtcadsenhaong"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtcadnomeong"
        app:layout_constraintVertical_bias="0.032" />

    <Button
        android:id="@+id/btncadcancelarong"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtcademailong"
        app:layout_constraintVertical_bias="0.303" />

    <Button
        android:id="@+id/btncadconfirmarong"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="76dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/confirmar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.605"
        app:layout_constraintStart_toEndOf="@+id/btncadcancelarong"
        app:layout_constraintTop_toBottomOf="@+id/etxtcademailong"
        app:layout_constraintVertical_bias="0.325" />

    <EditText
        android:id="@+id/etxtcademailong"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtcadconfirmarsenhaong"
        app:layout_constraintVertical_bias="0.034" />

</android.support.constraint.ConstraintLayout>